--- a/20251014-Transformer/scripts.ipynb
+++ b/20251014-Transformer/scripts.ipynb
@@ -6,13 +6,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 将输入的词汇表索引转换为指定维度的embedding\n",
+    "class TokenEmbedding(nn.Embedding):\n",
+    "    def __init__(self, vocab_size, d_model):\n",
+    "        super(TokenEmbedding, self).__init__(vocab_size, d_model, padding_idx=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class PositionalEmbedding(nn.Embedding):\n",
+    "    def __init__(self, d_model, max_len, device):\n",
+    "        super(PositionalEmbedding, self).__init__()\n",
+    "        self.encoding = torch.zeros(max_len, d_model, device=device)\n",
+    "        self.encoding.requires_grad = False\n",
+    "        pos = torch.arange(0, max_len, device=device)\n",
+    "        pos = pos.float().unsqueeze(dim=1)\n",
+    "        _2i = torch.arange(0, d_model, step=2, device=device).float()\n",
+    "        self.encoding[:, 0::2] = torch.sin(pos / (10000 ** (_2i / d_model)))\n",
+    "        self.encoding[:, 1::2] = torch.cos(pos / (10000 ** (_2i / d_model)))\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        batch_size, seq_len = x.size()\n",
+    "        return self.encoding[:seq_len, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformEmbedding(nn.Module):\n",
+    "    def __init__(self, vocab_size, d_model, max_len, drop_prob, device):\n",
+    "        super(TransformEmbedding, self).__init__()\n",
+    "        self.tok_emb = TokenEmbedding(vocab_size, d_model)\n",
+    "        self.pos_emb = PositionalEmbedding(d_model, max_len, device)\n",
+    "        self.drop_out = nn.Dropout(p=drop_prob)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        tok_emb = self.tok_emb(x)\n",
+    "        pos_emb = self.pos_emb(x)\n",
+    "        return self.drop_out(tok_emb + pos_emb)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
